@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Added
 - [API_PARSER] [RAPID7_IDR] Add priority field in the logs from rapid7_idr api
+- [API_PARSER] [APEX] Use the page_token parameter to prevent duplication of logs
 
 
 ## [2.15.2] - 2024-04-02
